fixed background behavior on mobile

--- a/styles/products.css
+++ b/styles/products.css
@@ -39,13 +39,6 @@ a {
 .products-list a {
   width: 100%;
   height: 100%;
-
-  transition: all 1s ease;
-}
-.products-list a {
-  width: 100%;
-  height: 100%;
-
   background-size: 70%;
   background-attachment: fixed;
   background-blend-mode: soft-light;
@@ -54,6 +47,8 @@ a {
 
 .products-list a:hover {
   width: 200%;
+  background-size: 75%;
+  background-color: var(--accent);
 }
 .products-list a h3 {
   color: var(--textlight);
@@ -65,10 +60,6 @@ a {
   opacity: 1;
   transform: translateY(0);
   transition: all 0.6s var(--defaultbezier);
-}
-.products-list a:hover {
-  background-size: 75%;
-  background-color: var(--accent);
 }
 .products-list a:hover > .large_button {
   padding-inline: 36px;
@@ -112,13 +103,15 @@ a {
     flex-direction: column;
   }
   .products-list a {
-    background-position: 50% 50%;
+    background-position: 0% 0% !important;
     background-size: 100%;
+    background-attachment: local;
     transition: all 1s ease;
   }
 
   .products-list a:hover {
     height: 200%;
-    background-size: 120%;
+    width: 100%;
+    background-size: 105%;
   }
 }
